# solana_learn

./: .cursorrules  .gitignore  README.md
lesson-3-pxsol-ss/: ACCOUNT_STRUCTURE.md  PROGRAM_ID_EXPLANATION.md  README.md  airdrop.py  get_pda.py  save.py
lesson-4-pxsol-thaibaht/: Cargo.toml  NOTES.md  make.py  操作手册.md
lesson-4-pxsol-thaibaht/res/: info.json
lesson-5-pxsol-ss-anchor/: Anchor.toml  NOTES.md  README.md
lesson-6-pxsol-spl/: Cargo.toml  make.py  notes.md
lesson-6-pxsol-spl-anchor/: Anchor.toml
lesson-6-pxsol-spl/res/: info.json
lesson-7-pinocchio-vault/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  notes.md
lesson-7-pinocchio-vault/examples/: client.rs
lesson-7-pinocchio-vault/src/: error.rs  helpers.rs  lib.rs  tests.rs
lesson-7-pinocchio-vault/src/instructions/: deposit.rs  initialize.rs  mod.rs  withdraw.rs
lesson-7-pinocchio-vault/src/state/: mod.rs  vault.rs
pxsol-ss/: .gitignore  Cargo.toml  NOTES.md  PROGRAM_PERMISSIONS.md  README.md  TESTING.md  deploy.py  load.py  requirements.txt
task-1-spl-token/: NOTE.md
task-2-blueshift-anchor-vault/: Anchor.toml
task-3-blueshift-anchor-escrow/: 学习路径.md
task-4-pinocchio-vault/: .gitignore  Cargo.toml
task-4-pinocchio-vault/clients/: codama.json  codegen.ts  package.json  pnpm-lock.yaml
task-4-pinocchio-vault/idl/: blueshift_vault.json
task-4-pinocchio-vault/src/: lib.rs
task-4-pinocchio-vault/src/instructions/: deposit.rs  mod.rs  withdraw.rs
task5-pinocchio-escrow/: Cargo.toml  setup-proxy.sh
(+27 files in other folders)
