[package]
edition = "2021"
name = "blueshift_vault"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "blueshift_vault"

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-system = "0.5.0"
solana-address = { version = "2.0.0", features = ["curve25519"] }
solana-program-log = "1.1.0"

# 将 shank 和 borsh 设置为可选，并关闭默认 features
borsh = { version = "1.6.0", default-features = false, features = [
  "derive",
], optional = true }
shank = { version = "0.4.6", optional = true }


[features]
# default = ["idl-build"]
# 定义一个名为 idl-build 的功能开关
idl-build = ["shank", "borsh"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
